- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.11.0
 - 
    None
 - 
    Debian GNU/Linux 10 (buster) [linux version 4.19.0-6-amd64]
 
- 
        
 - 
        b59785c4b55cc45d01a77d1f67b0f5875a906a05 (qt-creator/qt-creator/4.11)
 
Hello,
The new QtCreator crashes when QtCreatorDeployment.txt file is present in an imported project. I think the contents of the file can be anything.
The QtCreator crashes if only the GenericProjectManager plugin is loaded:
./qtcreator -noload all -load GenericProjectManager
I know this methond originally should be used with CMake projects link but it is would be a good feature with generic / imported projects, too; and this works with an QtCreator 4.10.2.
Steps to reproduce:
- create an empty directory
 - create an empty C source file (e.g.: main.c)
 - create an empty Makefile
 - start Qt Creator
 - create an imported project
	
- File -> New File or Project -> Imported Project -> Import Existing Project
 - Project name: test
Location: the directory you have created in the first step - File Selection:
main.c
Makefile - No version control
 
 - at this point the project can be closed and opened normally
 - create an empty file named QtCreatorDeployment.txt in the directory from first step
 - try to open the project
 - QtCreator crashes
 
System:
Debian GNU/Linux 10 (buster)
Backtrace:
$ gdb ./qtcreator (...) Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault. 0x00007fffe6704f10 in ProjectExplorer::Target::setDeploymentData(ProjectExplorer::DeploymentData const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so (gdb) bt #0 0x00007fffe6704f10 in ProjectExplorer::Target::setDeploymentData(ProjectExplorer::DeploymentData const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #1 0x00007fffd557564b in GenericProjectManager::Internal::GenericProject::updateDeploymentData() () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libGenericProjectManager.so #2 0x00007fffd55790f2 in GenericProjectManager::Internal::GenericProject::refresh(GenericProjectManager::Internal::GenericProject::RefreshOptions) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libGenericProjectManager.so #3 0x00007ffff5ac3490 in void doActivate<false>(QObject*, int, void**) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #4 0x00007fffe68698e2 in ProjectExplorer::Project::activeBuildConfigurationChanged(ProjectExplorer::ProjectConfiguration*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #5 0x00007fffe6704c9e in ProjectExplorer::Target::setActiveBuildConfiguration(ProjectExplorer::BuildConfiguration*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #6 0x00007fffe67071fe in ProjectExplorer::Target::addBuildConfiguration(ProjectExplorer::BuildConfiguration*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #7 0x00007fffe670879d in ProjectExplorer::Target::fromMap(QMap<QString, QVariant> const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #8 0x00007fffe6740b9d in ProjectExplorer::Project::createTargetFromMap(QMap<QString, QVariant> const&, int) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #9 0x00007fffe674126f in ProjectExplorer::Project::fromMap(QMap<QString, QVariant> const&, QString*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #10 0x00007fffd557a7b6 in GenericProjectManager::Internal::GenericProject::fromMap(QMap<QString, QVariant> const&, QString*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libGenericProjectManager.so #11 0x00007fffe673e4d2 in ProjectExplorer::Project::restoreSettings(QString*) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #12 0x00007fffe665ef44 in ProjectExplorer::ProjectExplorerPlugin::openProjects(QStringList const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #13 0x00007fffe665f551 in ProjectExplorer::ProjectExplorerPlugin::openProject(QString const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #14 0x00007fffe665fa54 in ProjectExplorer::ProjectExplorerPlugin::openProjectWelcomePage(QString const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #15 0x00007fffe683402c in ProjectExplorer::Internal::ProjectDelegate::editorEvent(QEvent*, QAbstractItemModel*, QStyleOptionViewItem const&, QModelIndex const&) () from /home/aron/Qt/Tools/QtCreator/lib/qtcreator/plugins/libProjectExplorer.so #16 0x00007ffff723b400 in QAbstractItemViewPrivate::sendDelegateEvent(QModelIndex const&, QEvent*) const () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #17 0x00007ffff7240898 in QAbstractItemView::edit(QModelIndex const&, QAbstractItemView::EditTrigger, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #18 0x00007ffff723b71d in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #19 0x00007ffff72ab9b3 in QTreeView::mouseReleaseEvent(QMouseEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #20 0x00007ffff703a728 in QWidget::event(QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #21 0x00007ffff70e284e in QFrame::event(QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #22 0x00007ffff724496c in QAbstractItemView::viewportEvent(QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #23 0x00007ffff72ab45c in QTreeView::viewportEvent(QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #24 0x00007ffff5a8c87d in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #25 0x00007ffff6ffba52 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #26 0x00007ffff7003208 in QApplication::notify(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #27 0x00007ffff5a8cae8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #28 0x00007ffff70021fa in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #29 0x00007ffff7053e41 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #30 0x00007ffff7056a8b in QWidgetWindow::event(QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #31 0x00007ffff6ffba7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #32 0x00007ffff7002cb0 in QApplication::notify(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #33 0x00007ffff5a8cae8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #34 0x00007ffff66f0ad8 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #35 0x00007ffff66f1fb5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #36 0x00007ffff66cebdb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #37 0x00007ffff0c24e7a in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /home/aron/Qt/Tools/QtCreator/lib/Qt/plugins/platforms/../../lib/libQt5XcbQpa.so.5 #38 0x00007ffff2420f2e in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #39 0x00007ffff24211c8 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #40 0x00007ffff242125c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #41 0x00007ffff5ae555c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #42 0x00007ffff5a8b502 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #43 0x00007ffff5a94430 in QCoreApplication::exec() () from /home/aron/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #44 0x000000000040a8c0 in main ()
System information
Qt 5.14.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 5.3.1 20160406 (Red Hat 5.3.1-6)) on "xcb" 
OS: Debian GNU/Linux 10 (buster) [linux version 4.19.0-6-amd64]
Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 AVX AVX2 RTM HLE
Environment:
  QT_ACCESSIBILITY="1"
  QT_AUTO_SCREEN_SCALE_FACTOR="0"
  QT_SCREEN_SCALE_FACTORS="HDMI-1=1;DP-1=1;HDMI-2=1;DP-2=1;HDMI-3=1;DP-3=1;DP-2-8=1;DP-2-1=1;DP-1-8=1;DP-1-1=1;"
Features: QT_NO_EXCEPTIONS
Library info:
  PrefixPath: /home/aron/Qt/Tools/QtCreator/lib/Qt
  DocumentationPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/doc
  HeadersPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/include
  LibrariesPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/lib
  LibraryExecutablesPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/libexec
  BinariesPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/bin
  PluginsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/plugins
  ImportsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/imports
  Qml2ImportsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/qml
  ArchDataPath: /home/aron/Qt/Tools/QtCreator/lib/Qt
  DataPath: /home/aron/Qt/Tools/QtCreator/lib/Qt
  TranslationsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/translations
  ExamplesPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/examples
  TestsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt/tests
  SettingsPath: /home/aron/Qt/Tools/QtCreator/lib/Qt
Standard paths [*...* denote writable entry]:
  DesktopLocation: "Desktop" */home/aron/Asztal*
  DocumentsLocation: "Documents" */home/aron/Dokumentumok*
  FontsLocation: "Fonts" */home/aron/.local/share/fonts* /home/aron/.fonts /usr/share/fonts /usr/local/share/fonts
  ApplicationsLocation: "Applications" */home/aron/.local/share/applications* /usr/share/applications /usr/local/share/applications
  MusicLocation: "Music" */home/aron/Zenék*
  MoviesLocation: "Movies" */home/aron/Videók*
  PicturesLocation: "Pictures" */home/aron/Képek*
  TempLocation: "Temporary Directory" */tmp*
  HomeLocation: "Home" */home/aron*
  AppLocalDataLocation: "Application Data" */home/aron/.local/share/QtProject/qtdiag* /usr/share/QtProject/qtdiag /usr/local/share/QtProject/qtdiag
  CacheLocation: "Cache" */home/aron/.cache/QtProject/qtdiag*
  GenericDataLocation: "Shared Data" */home/aron/.local/share* /usr/share /usr/local/share
  RuntimeLocation: "Runtime" */run/user/1000*
  ConfigLocation: "Configuration" */home/aron/.config* /etc/xdg
  DownloadLocation: "Download" */home/aron/Letöltések*
  GenericCacheLocation: "Shared Cache" */home/aron/.cache*
  GenericConfigLocation: "Shared Configuration" */home/aron/.config* /etc/xdg
  AppDataLocation: "Application Data" */home/aron/.local/share/QtProject/qtdiag* /usr/share/QtProject/qtdiag /usr/local/share/QtProject/qtdiag
  AppConfigLocation: "Application Configuration" */home/aron/.config/QtProject/qtdiag* /etc/xdg/QtProject/qtdiag
File selectors (increasing order of precedence):
  hu_HU unix linux debian
Network:
  Using "OpenSSL 1.1.1d  10 Sep 2019", version: 0x1010104f
Platform capabilities: ThreadedPixmaps OpenGL ThreadedOpenGL WindowMasks MultipleWindows ForeignWindows NonFullScreenWindows NativeWidgets WindowManagement SyncState RasterGLSurface SwitchableWidgetComposition
Style hints:
  mouseDoubleClickInterval: 400
  mousePressAndHoldInterval: 800
  startDragDistance: 10
  startDragTime: 500
  startDragVelocity: 0
  keyboardInputInterval: 400
  keyboardAutoRepeatRate: 30
  cursorFlashTime: 1000
  showIsFullScreen: 0
  showIsMaximized: 0
  passwordMaskDelay: 0
  passwordMaskCharacter: U+25CF
  fontSmoothingGamma: 1.7
  useRtlExtensions: 0
  setFocusOnTouchRelease: 0
  tabFocusBehavior: Qt::TabFocusAllControls 
  singleClickActivation: 1
Additional style hints (QPlatformIntegration):
  ReplayMousePressOutsidePopup: 0
Theme:
  Platforms requested : kde,generic
            available : gtk3,snap,flatpak,xdgdesktopportal
  Styles requested    : Breeze,breeze,Oxygen,fusion,windows
         available    : Windows,Fusion
  Icon theme          : breeze-dark, breeze from /home/aron/.local/share/icons,/usr/share/icons
  System font         : "Noto Sans" 10
Fonts:
  General font : "Noto Sans" 10
  Fixed font   : "Hack" 9
  Title font   : "DejaVu Sans" 12
  Smallest font: "DejaVu Sans" 12
Palette:
  QPalette::WindowText: #ffeff0f1
  QPalette::Button: #ff31363b
  QPalette::Light: #ff181b1d
  QPalette::Midlight: #ff24282c
  QPalette::Dark: #ff626c76
  QPalette::Mid: #ff41484e
  QPalette::Text: #ffeff0f1
  QPalette::BrightText: #ffffffff
  QPalette::ButtonText: #ffeff0f1
  QPalette::Base: #ff232629
  QPalette::Window: #ff31363b
  QPalette::Shadow: #ff000000
  QPalette::Highlight: #ff3daee9
  QPalette::HighlightedText: #ffeff0f1
  QPalette::Link: #ff2980b9
  QPalette::LinkVisited: #ff7f8c8d
  QPalette::AlternateBase: #ff31363b
  QPalette::NoRole: #ff000000
  QPalette::ToolTipBase: #ff31363b
  QPalette::ToolTipText: #ffeff0f1
  QPalette::PlaceholderText: #80eff0f1
Screens: 3, High DPI scaling: inactive
# 0 "DP-1-8" Depth: 24 Primary: yes
  Manufacturer: Dell Inc.
  Model: DELL U2415-
  Serial number: 7MT018520D2L-
  Geometry: 1920x1200+0+0 Available: 1920x1200+0+0
  Virtual geometry: 5760x1200+0+0 Available: 5760x1200+0+0
  3 virtual siblings
  Physical size: 518x324 mm  Refresh: 59.9502 Hz Power state: 0
  Physical DPI: 94.1467,94.0741 Logical DPI: 96,96.1514 Subpixel_None
  DevicePixelRatio: 1 Pixel density: 1
  Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
# 1 "HDMI-1" Depth: 24 Primary: no
  Manufacturer: Dell Inc.
  Model: DELL U2212HM-
  Serial number: Y9KCH1AB04WL-
  Geometry: 1920x1080+3840+0 Available: 1920x1080+3840+0
  Virtual geometry: 5760x1200+0+0 Available: 5760x1200+0+0
  3 virtual siblings
  Physical size: 475x267 mm  Refresh: 60 Hz Power state: 0
  Physical DPI: 102.669,102.742 Logical DPI: 96,96.1514 Subpixel_None
  DevicePixelRatio: 1 Pixel density: 1
  Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
# 2 "DP-2-8" Depth: 24 Primary: no
  Manufacturer: Dell Inc.
  Model: DELL U2415-
  Serial number: 7MT018520D1L-
  Geometry: 1920x1200+1920+0 Available: 1920x1200+1920+0
  Virtual geometry: 5760x1200+0+0 Available: 5760x1200+0+0
  3 virtual siblings
  Physical size: 518x324 mm  Refresh: 59.9502 Hz Power state: 0
  Physical DPI: 94.1467,94.0741 Logical DPI: 96,96.1514 Subpixel_None
  DevicePixelRatio: 1 Pixel density: 1
  Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
LibGL Vendor: Intel Open Source Technology Center
Renderer: Mesa DRI Intel(R) HD Graphics P530 (Skylake GT2) 
Version: 3.0 Mesa 18.3.6
Shading language: 1.30
Format: Version: 3.0 Profile: 0 Swap behavior: 0 Buffer size (RGB): 8,8,8
Profile: None (QOpenGLFunctions_3_0)
Unable to create a Vulkan instance, error code is0
Failed to load vulkan: Cannot load library vulkan: (vulkan: nem nyitható meg a megosztott objektumfájl: Nincs ilyen fájl vagy könyvtár)
initInstance: No Vulkan library available
Failed to create platform Vulkan instance
Plugin information:
+ Android                           4.11.0
+ AutoTest                          4.11.0
  AutotoolsProjectManager           4.11.0
+ BareMetal                         4.11.0
+ Bazaar                            4.11.0
  Beautifier                        4.11.0
+ BinEditor                         4.11.0
+ Bookmarks                         4.11.0
  Boot2Qt                           4.11.0
+ CMakeProjectManager               4.11.0
+ CVS                               4.11.0
+ ClangCodeModel                    4.11.0
  ClangFormat                       4.11.0
+ ClangPchManager                   4.11.0
+ ClangRefactoring                  4.11.0
+ ClangTools                        4.11.0
+ ClassView                         4.11.0
  ClearCase                         4.11.0
+ CodePaster                        4.11.0
+ CompilationDatabaseProjectManager 4.11.0
+ Core                              4.11.0
+ CppEditor                         4.11.0
+ CppTools                          4.11.0
+ Cppcheck                          4.11.0
+ CtfVisualizer                     4.11.0
+ Debugger                          4.11.0
+ Designer                          4.11.0
+ DiffEditor                        4.11.0
+ EmacsKeys                         4.11.0
+ FakeVim                           4.11.0
+ GLSLEditor                        4.11.0
+ GenericProjectManager             4.11.0
+ Git                               4.11.0
  HelloWorld                        4.11.0
+ Help                              4.11.0
+ ImageViewer                       4.11.0
  Ios                               4.11.0
+ LanguageClient                    4.11.0
+ Macros                            4.11.0
  McuSupport                        4.11.0
+ Mercurial                         4.11.0
+ ModelEditor                       4.11.0
  Nim                               4.11.0
+ PerfProfiler                      4.11.0
  Perforce                          4.11.0
+ ProjectExplorer                   4.11.0
+ Python                            4.11.0
+ QbsProjectManager                 4.11.0
+ QmakeProjectManager               4.11.0
+ QmlDesigner                       4.11.0
+ QmlJSEditor                       4.11.0
+ QmlJSTools                        4.11.0
+ QmlPreview                        4.11.0
+ QmlProfiler                       4.11.0
+ QmlProjectManager                 4.11.0
+ Qnx                               4.11.0
+ QtSupport                         4.11.0
  QtcMarkview                       4.10.0
+ RemoteLinux                       4.11.0
+ ResourceEditor                    4.11.0
+ ScxmlEditor                       4.11.0
  SerialTerminal                    4.11.0
+ SilverSearcher                    4.11.0
  StudioWelcome                     4.11.0
+ Subversion                        4.11.0
+ TaskList                          4.11.0
+ TextEditor                        4.11.0
+ Todo                              4.11.0
+ UpdateInfo                        4.11.0
+ Valgrind                          4.11.0
+ VcsBase                           4.11.0
  WebAssembly                       4.11.0
+ Welcome                           4.11.0
  WinRt                             4.11.0
Qt Creator 4.11.0
Based on Qt 5.14.0 (GCC 5.3.1 20160406 (Red Hat 5.3.1-6), 64 bit)
From revision 017ed74400
Built on Dec 10 2019 14:25:29
| For Gerrit Dashboard: QTCREATORBUG-23501 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 287386,2 | GenericProjectManager: Fix crash updating deployment data | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |