src/plugins/genericprojectmanager/genericproject.cpp
@@ -546,10 +546,12 @@ void GenericProject::updateDeploymentData()
         hasDeploymentData = QFileInfo::exists(deploymentFilePath.toString());
     }
     if (hasDeploymentData) {
-        DeploymentData deploymentData;
-        deploymentData.addFilesFromDeploymentFile(deploymentFilePath.toString(),
-                                                  projectDirectory().toString());
-        activeTarget()->setDeploymentData(deploymentData);
+        if (activeTarget()) {
+            DeploymentData deploymentData;
+            deploymentData.addFilesFromDeploymentFile(deploymentFilePath.toString(),
+                                                      projectDirectory().toString());
+            activeTarget()->setDeploymentData(deploymentData);
+        }
         if (m_deployFileWatcher->files() != QStringList(deploymentFilePath.toString())) {
             m_deployFileWatcher->removeFiles(m_deployFileWatcher->files());
             m_deployFileWatcher->addFile(deploymentFilePath.toString(),
